istio/envoy-ex.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: headers-extension
spec:
  configPatches:
    - applyTo: EXTENSION_CONFIG
      patch:
        operation: ADD
        value:
          name: headers-extension
          typed_config:
            "@type": type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
            value:
              config:
                vm_config:
                  vm_id: headers-extension-vm
                  runtime: envoy.wasm.runtime.v8
                  code:
                    remote:
                      http_uri:
                        uri: http://istio-weekly-ep7.storage.googleapis.com/main.wasm
                configuration:
                  "@type": type.googleapis.com/google.protobuf.StringValue
                  value: |
                    header_1=somevalue
                    header_2=secondvalue
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
      patch:
        operation: INSERT_BEFORE
        value:
          name: headers-extension
          config_discovery:
            config_source:
              ads: {}
              initial_fetch_timeout: 0s # wait indefinitely to prevent bad Wasm fetch
            type_urls:
              ["type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm"]
