istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: system
  namespace: auth-system
spec:
  hosts:
    - "*"
  gateways:
    - system-gateway
  http:
    - match:
        - uri:
            prefix: /auth/
      route:
        - destination:
            port:
              number: 8080
            host: keycloak
    - match:
        - uri:
            prefix: /opa/
      rewrite:
        uri: "/"
      route:
        - destination:
            port:
              number: 8181
            host: opa
